# stan-vb-extract

./: .travis.yml  LICENSE  README.md  pyproject.toml  vb_extract.py
.github/workflows/: ci.yml
tests/: test_vb_extract.py
